# poetry-template

./: .gitignore  .pre-commit-config.yaml  README.md  pyproject.toml
.github/workflows/: ci.yml
src/: __init__.py
tests/: __init__.py  test_placeholder.py
